upgraded to latest, less padding on cards in mobile. Fixed some z-indexing issues

--- a/src/app/shared/components/side-nav/side-nav-mobile/side-nav-mobile.component.scss
+++ b/src/app/shared/components/side-nav/side-nav-mobile/side-nav-mobile.component.scss
@@ -1,6 +1,7 @@
 .mobile-nav-menu-button {
     position: fixed;
     margin: 12px 19px 12px 9px;
+    z-index: 1;
 
     #nav-icon1 span{
         display: block;
